# LaserTag-Project

./: CMakeLists.txt  README  README.markdown  Readme.ru.txt
cicruts/detector/: dete.brd  dete.net  dete.sch  dete.stf
cicruts/reciver/v0.1/: reciver-cache.lib  reciver.pro  reciver.sch
cicruts/sensor/v0.1/: tsop-cache.lib  tsop.brd
cicruts/switch/: switch.pro  switch.sch
cicruts/tools/asm-detector/: dete-cache.lib  dete.cmp  dete.lst  dete.pro
cicruts/tools/asm-reciver/v0.1/: reciver-cache.lib  reciver.brd  reciver.net
cicruts/tools/asm-sensor/v0.1/: tsop.net  tsop.pro
cicruts/tools/asm-switch/: switch-cache.lib
cicruts/tsop/: tsop.cmp  tsop.sch
doc/: asm-LaserTag.ru.txt  git-rules.txt  model-rules.ru.txt
emulator/: Reame.txt  emu.c  hardware.c  main.c  makefile
emulator_sdl/: CMakeLists.txt  readme.txt
emulator_sdl/include/: sdlapp.h  sdlevent.h  sdlsurf.h  utils.h
emulator_sdl/src/: anim.cpp  entity.cpp  timer.cpp
emulators/: CMakeLists.txt
emulators/emulator_sdl/: CMakeLists.txt  readme.txt
emulators/emulator_sdl/include/: anim.h  entity.h  main.h  sdlapp.h  sdlfont.h  sdlobject.h  sdlsurf.h  timer.h  utils.h
emulators/emulator_sdl/src/: entity.cpp  main.cpp  sdlapp.cpp  sdlevent.cpp  sdlfont.cpp  sdlobject.cpp  sdlsurf.cpp  utils.cpp
emulators/ncurses/: Reame.txt  emu.c  hardware.c  makefile
firmware/: Makefile  main.c
firmware/asm-nousb-0.1/: reciver.c  sender.c  sender.h  support.h  timer.c  timer.h
firmware/asm-usb-0.1/: checksize  usb_commands.h  usbconfig.h  usbtty.c  usbtty.h
firmware/asm-usb-0.1/usbdrv/: usbconfig-prototype.h
firmware_nousb/: Makefile  config.make  main.c  reciver.c  reciver.h  sender.c  sender.h  support.h  timer.c  timer.h
interfaces/: hardware.h
logick/: gun.c  gun.h  ircoder.c  ircoder.h  makefile
logick/asm-simple/: Readme.txt  gun.c  gun.h  makefile
logick/protocol/: CMakeLists.txt  Readme.ru.txt  coder.c  coder.h
